...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Major" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="64q-Hs-gJT">
                                <rect key="frame" x="30" y="227.5" width="349" height="52"/>
                                <constraints>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gfL-Ge-vll">
                                <rect key="frame" x="260" y="68" width="114" height="30"/>
                                <state key="normal" title="Search Students">
                                    <color key="titleColor" systemColor="systemGreenColor"/>
                                </state>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="My Buildings" image="building" catalog="system" selectedImage="building" id="MhO-Ca-4bR"/>
                    <navigationItem key="navigationItem" id="SGW-0i-yb4"/>
                    <connections>
...
                                                                <rect key="frame" x="0.0" y="0.0" width="378" height="50"/>
                                                                <subviews>
                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TJO-rO-Fgo">
                                                                        <rect key="frame" x="0.0" y="0.0" width="378" height="50"/>
                                                                        <color key="tintColor" systemColor="systemGreenColor"/>
...
                                                                <rect key="frame" x="0.0" y="74" width="378" height="50"/>
                                                                <subviews>
                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="29b-Bs-ZbV">
                                                                        <rect key="frame" x="0.0" y="0.0" width="378" height="50"/>
                                                                        <color key="tintColor" systemColor="systemGreenColor"/>
...
                                                    <constraint firstAttribute="height" constant="50" id="ezw-co-6Em"/>
                                                </constraints>
                                                <state key="normal" title="Continue">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                                <rect key="frame" x="143" y="725" width="128" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Continue to Profile">
                                    <color key="titleColor" systemColor="systemGreenColor"/>
                                </state>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="USC ID" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WeI-ES-Hqb">
                                                    <rect key="frame" x="287" y="50" width="107" height="21"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
